deployment/accounts-api/deployment.accounts-api.yaml
# webcam backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-api-pod
  template:
    metadata:
      labels:
        app: accounts-api-pod
    spec:
      containers:
        - name: accounts-api-pod
          image: ayratkhisamiev/accounts-api:ac-8-accounts
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-api-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: accounts-api-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-accounts.thin-box.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accounts-api-svc
                port:
                  number: 3000
  tls:
    - secretName: thin-box.online
      hosts:
        - 'api-accounts.thin-box.online'
